# osxphotos

./: .all-contributorsrc  .bumpversion.cfg  .gitattributes  .gitignore  .sourcery.yaml  API_README.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  README_DEV.md  SHELL_COMPLETION.md  applecrate.toml  build.sh  build.txt  cli.py  dev_requirements.txt  disclaim.cpp  disclaim.py  make_cli_exe.sh  osxphotos.spec  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.py  tox.ini
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: compatibility.yml  homebrew-sync.yml  pythonpackage.yml  tests.yml
Formula/: osxphotos.rb
completions/: README.md  osxphotos.fish
docs/: .buildinfo  API_README.html  README.md  cli.html  conf.py  genindex.html  index.html  index.rst  modules.html  objects.inv  overview.cog.html  overview.html  package_overview.html  py-modindex.html  reference.html  search.html  searchindex.js  template_help.html  tutorial.html
docs/_modules/: index.html
docs/_sources/: API_README.rst.txt  cli.rst.txt  cli_export.rst.txt  index.rst.txt  overview.cog.rst.txt  overview.rst.txt  template_help.rst.txt  tutorial.md.txt  tutorial.rst.txt
docs/_static/: documentation_options.js
docs/screencast/: terminalizer-demo.yml
docs/source/: modules.rst  reference.rst
docsrc/: Makefile  README.md
docsrc/source/: API_README.rst  api_readme.rst  cli.rst  conf.py  overview.cog.rst  overview.rst  package_overview.rst  reference.rst  template_help.rst  tutorial.md  tutorial.rst
examples/: add_finder_tags.py  add_size_to_caption.py  add_to_album.py  album_order.py  album_sequence.py  album_sort_order.py  albums.py  bad_photos.py  batch_edit.py  captions_from_comments.py  captions_from_filenames.py  cli_example_1.py  cli_example_2.py  cli_example_3.py  compare_albums.py  concurrent_export.py  copy_photos_metadata.py  count_photos.py  counts.py  custom_sidecar_json.mako  custom_sidecar_xmp.mako  date_delta.py  dbversion.py  delete_empty_albums.py  detect_qrcodes.py  detect_text_in_photos.py  diagnose_shared_albums.py  erase_keywords.py  example_command_line_query.py  examples.py  export.py  export_by_album.py  export_faces.py  export_previews.py  export_template.py  find_bad_extensions.py  find_unnamed_faces.py  find_wrong_extensions.py  finder_tags_to_keywords.py  fix_export_extension.py  (+42 more)
osxphotos/: __init__.py  __main__.py  _applescript.py  _constants.py  _export_db.py  _filecmp.py  _version.py  adjustmentsinfo.py  aecodecs.py  albuminfo.py  bookmark.py  cli.py  cli_help.py  cmd_line.py  commentinfo.py  compare_exif.py  compare_libraries.py  configoptions.py  crash_reporter.py  datetime_formatter.py  datetime_utils.py  debug.py  dictdiff.py  disclaim.py  exif_datetime_updater.py  exif_orientation.py  exifinfo.py  exiftool.py  exiftool_filetypes.json  exifutils.py  exifwriter.py  export_db.py  export_db_utils.py  exportoptions.py  fileutil.py  fingerprint.py  fingerprintquery.py  frozen_photoinfo.py  gitignorefile.py  image_file_utils.py  (+62 more)
osxphotos/_applescript/: __init__.py  aecodecs.py  kae.py
osxphotos/cli/: __init__.py  about.py  add_locations.py  albums.py  batch_edit.py  cli.py  cli_commands.py  cli_params.py  click_rich_echo.py  color_themes.py  common.py  compare.py  custom_sidecar.py  darkmode.py  dbversion.py  debug_dump.py  docs.py  dump.py  exiftool_cli.py  export.py  exportdb.py  grep.py  help.py  import_cli.py  import_grouper.py  info.py  install_completion.py  install_uninstall_run.py  keywords.py  kill_photos.py  kvstore.py  labels.py  list.py  mcp.py  orphans.py  param_types.py  persons.py  photo_inspect.py  places.py  print_photo_info.py  (+24 more)
osxphotos/docs/: .buildinfo  README.md  cli.html  cli_export.html  genindex.html  index.html  modules.html  objects.inv  overview.html  package_overview.html  py-modindex.html  reference.html  search.html  searchindex.js  template_help.html  tutorial.html
osxphotos/lib/: README.md  libdisclaim_arm64.dylib  libdisclaim_x86_64.dylib
osxphotos/mcp_server/: prompts.py  resources.py  schemas.py  server.py  tools_readonly.py  tools_write.py
osxphotos/photoinfo/: __init__.py  _photoinfo_comments.py  _photoinfo_exifinfo.py  _photoinfo_exiftool.py  _photoinfo_export.py  _photoinfo_scoreinfo.py  _photoinfo_searchinfo.py  photoinfo.py  photoinfo_mixin_searchinfo.py  template.py
osxphotos/photosdb/: __init__.py  _photosdb_process_comments.py  _photosdb_process_exif.py  _photosdb_process_faceinfo.py  photosdb.py  (+6 more)
scripts/: Dockerfile.linux-tests  README_LINUX_TESTS.md  build_cli.sh  generate_completions.py  get_latest_pypi_version.py  postinstall.sh  preinstall.sh  pyapp-runner.sh  run_linux_tests.sh  test_runner.sh  uninstall.sh
tests/: README.md  check_uuid.py  config_timewarp_catalina.py  config_timewarp_ventura.py  conftest.py  custom_sidecar.mako  custom_sidecar_bad.mako  custom_sidecar_zero.mako  dt_utils.py  dump_photo_info.applescript  export_db_no_version.db  export_db_version1.db  export_photo_info.scpt  gen_face_test_data.py  generate_search_info_test_data.py  generate_sidecars_for_test.py  get_photo_info.scpt  iphoto_test_data.json  locale_util.py  parse_timewarp_output.py  photoinfo_mock.py  search_info_test_data.json  search_info_test_data_10_15_7.json  search_info_test_data_13.json  skip_uuid_from_file.txt  switch_photos_library.sh  tempdiskimage.py  template_filter.py  template_function.py  test-16.0.0-beta.json  test-Test-26.1.json  test-Test-27.0_DevBeta.json  test_10_12_6.py  test___all__.py  test_abbrev_to_canonical_timezone.py  test_albums_folders_catalina_10_15_4.py  test_albums_folders_catalina_10_15_7.py  test_albums_folders_high_sierra_10_13_6.py  test_albums_folders_mojave_10_14_6.py  test_bad_missing_database.py  (+168 more)
utils/: README.md  build_help_table.py  copy_uuid_to_clipboard.applescript  dump_photo_info.scpt  exiftool_supported_types.py  gen_face_test_data.py  generate_search_info_test_data.py  generate_template_docs.py  get_model_ver.py  get_photo_info.applescript  update_readme.py  write_uuid_to_file.applescript
(+2648 files in other folders)
