# pyproject.toml for osxphotos
# Replaces: setup.py, requirements.txt, dev_requirements.txt,
#           pytest.ini, .isort.cfg, .bumpversion.cfg, MANIFEST.in
#
# After committing this file you can delete:
#   setup.py, requirements.txt, dev_requirements.txt,
#   pytest.ini, .isort.cfg, .bumpversion.cfg, MANIFEST.in
#
# Bump versions with:  bump-my-version bump [major|minor|patch]
# Build with:          python -m build
# Publish with:        twine upload dist/*

# ---------------------------------------------------------------------------
# Build system
# ---------------------------------------------------------------------------
[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

# ---------------------------------------------------------------------------
# Project metadata  (replaces setup.py)
# ---------------------------------------------------------------------------
[project]
name = "osxphotos"
dynamic = ["version"]   # read from osxphotos/_version.py via [tool.setuptools.dynamic]
description = "Export photos from Apple's macOS Photos app and query the Photos library database to access metadata about images."
readme = {file = "README.rst", content-type = "text/x-rst"}
license = {text = "MIT"}
authors = [
    {name = "Rhet Turnbull", email = "rturnbull+git@gmail.com"},
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# ---------------------------------------------------------------------------
# Runtime dependencies  (replaces requirements.txt)
# ---------------------------------------------------------------------------
# NOTE: pyobjc versioning uses requirements.txt split (more accurate than
#       the original setup.py): <22.0 + python<3.12 → 9.x; otherwise → 10+
# NOTE: "pip" is an intentional runtime dependency — osxphotos has
#       `osxphotos install` / `osxphotos uninstall` commands that call pip
#       programmatically at runtime.
dependencies = [
    "beautifulsoup4",
    "bitmath>=1.3.3.1,<2.0.0",
    "bpylist2>=4.1.1,<5.0.0",
    "cgmetadata>=0.2.0; sys_platform == 'darwin'",
    "Click>=8.1.3",
    "mac-alias>=2.2.2,<3.0.0; sys_platform == 'darwin'",
    "makelive>=0.6.2; sys_platform == 'darwin'",
    "Mako>=1.2.2,<2.0.0",
    "markdown2",
    "more-itertools>=8.8.0",
    "objexplore>=1.6.3,<2.0.0",
    "osxmetadata>=1.4.0,<2.0.0; sys_platform == 'darwin'",
    "packaging>=21.3",
    "pathvalidate>=2.4.1,<4.0.0",
    "photoscript>=0.5.3; sys_platform == 'darwin'",
    "pip",
    "psutil",
    "ptpython>=3.0.20,<4.0.0",
    # macOS < Monterey (platform_release < 22.0) with python < 3.12 → pyobjc 9.x
    # All other combinations (Monterey+, or python 3.12+ on older macOS) → pyobjc 10+
    # See: https://github.com/RhetTbull/osxphotos/issues/1324
    "pyobjc-core>=9.0,<10.0; sys_platform == 'darwin' and platform_release < '22.0' and python_version < '3.12'",
    "pyobjc-core>=10.0; sys_platform == 'darwin' and (platform_release >= '22.0' or python_version >= '3.12')",
    "pyobjc-framework-AppleScriptKit>=9.0,<10.0; sys_platform == 'darwin' and platform_release < '22.0' and python_version < '3.12'",
    "pyobjc-framework-AppleScriptKit>=10.0; sys_platform == 'darwin' and (platform_release >= '22.0' or python_version >= '3.12')",
    "pyobjc-framework-AppleScriptObjC>=9.0,<10.0; sys_platform == 'darwin' and platform_release < '22.0' and python_version < '3.12'",
    "pyobjc-framework-AppleScriptObjC>=10.0; sys_platform == 'darwin' and (platform_release >= '22.0' or python_version >= '3.12')",
    "pyobjc-framework-AVFoundation>=9.0,<10.0; sys_platform == 'darwin' and platform_release < '22.0' and python_version < '3.12'",
    "pyobjc-framework-AVFoundation>=10.0; sys_platform == 'darwin' and (platform_release >= '22.0' or python_version >= '3.12')",
    "pyobjc-framework-Cocoa>=9.0,<10.0; sys_platform == 'darwin' and platform_release < '22.0' and python_version < '3.12'",
    "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin' and (platform_release >= '22.0' or python_version >= '3.12')",
    "pyobjc-framework-CoreServices>=9.0,<10.0; sys_platform == 'darwin' and platform_release < '22.0' and python_version < '3.12'",
    "pyobjc-framework-CoreServices>=10.0; sys_platform == 'darwin' and (platform_release >= '22.0' or python_version >= '3.12')",
    "pyobjc-framework-Metal>=9.0,<10.0; sys_platform == 'darwin' and platform_release < '22.0' and python_version < '3.12'",
    "pyobjc-framework-Metal>=10.0; sys_platform == 'darwin' and (platform_release >= '22.0' or python_version >= '3.12')",
    "pyobjc-framework-Photos>=9.0,<10.0; sys_platform == 'darwin' and platform_release < '22.0' and python_version < '3.12'",
    "pyobjc-framework-Photos>=10.0; sys_platform == 'darwin' and (platform_release >= '22.0' or python_version >= '3.12')",
    "pyobjc-framework-Quartz>=9.0,<10.0; sys_platform == 'darwin' and platform_release < '22.0' and python_version < '3.12'",
    "pyobjc-framework-Quartz>=10.0; sys_platform == 'darwin' and (platform_release >= '22.0' or python_version >= '3.12')",
    "pyobjc-framework-Vision>=9.0,<10.0; sys_platform == 'darwin' and platform_release < '22.0' and python_version < '3.12'",
    "pyobjc-framework-Vision>=10.0; sys_platform == 'darwin' and (platform_release >= '22.0' or python_version >= '3.12')",
    "pytimeparse2>=1.4.0,<2.0.0",
    "PyYAML>=6.0.0,<7.0.0",
    "requests>=2.27.1,<3.0.0",
    "rich>=13.5.2,<14.0.0",
    "rich_theme_manager>=0.11.0",
    "shortuuid>=1.0.9,<2.0.0",
    "strpdatetime>=0.4.0",
    "tenacity>=8.0.1,<9.0.0",
    "textx>=4.0.1,<5.0.0",
    "toml>=0.10.2,<0.12.0",
    "tzdata",
    "utitools>=0.3.0",
    "whenever>=0.8.3,<0.9.0",
    "wrapt>=1.14.1,<2.0.0",
    "wurlitzer>=3.0.2,<4.0.0",
    "xdg-base-dirs>=6.0.0; python_version >= '3.10'",
]

# ---------------------------------------------------------------------------
# Optional / dev dependencies  (replaces dev_requirements.txt)
# Install with:  pip install -e ".[dev]"
# ---------------------------------------------------------------------------
[project.optional-dependencies]
dev = [
    "black",
    "build",
    "bump-my-version",          # successor to bump2version; reads [tool.bumpversion]
    "cogapp>=3.3.0,<4.0.0",
    "furo",
    "isort",
    "m2r2==0.3.3.post2",
    "pdbpp",
    "pyinstaller>=6.11.1",
    "pytest>=7.4.0,<8.0.0",
    "pytest-cov==4.0.0",
    "pytest-mock",
    "rstcheck>=6.2.4",
    "ruff==0.11.8",
    "setuptools>=65.5.1",       # pinned by Snyk to avoid a vulnerability
    "Sphinx",
    "sphinx_click",
    "sphinx_click_custom>=0.3.0",
    "sphinx-copybutton",
    "sphinx_rtd_theme",
    "sphinxcontrib-programoutput",
    "twine",
    "wheel",
]

# ---------------------------------------------------------------------------
# Entry points  (replaces setup.py entry_points)
# ---------------------------------------------------------------------------
[project.scripts]
osxphotos = "osxphotos.__main__:cli_main"

# ---------------------------------------------------------------------------
# Project URLs
# ---------------------------------------------------------------------------
[project.urls]
Homepage   = "https://github.com/RhetTbull/osxphotos"
Repository = "https://github.com/RhetTbull/osxphotos"
Download   = "https://github.com/RhetTbull/osxphotos"

# ---------------------------------------------------------------------------
# Setuptools configuration
# ---------------------------------------------------------------------------
[tool.setuptools]
# include_package_data is True by default in modern setuptools when using
# pyproject.toml; we declare data files explicitly below instead of relying
# on MANIFEST.in so the wheel and sdist both get the same files.
include-package-data = true

[tool.setuptools.dynamic]
# Read __version__ from osxphotos/_version.py
version = {attr = "osxphotos._version.__version__"}

[tool.setuptools.packages.find]
# Automatically discover all Python packages (directories with __init__.py).
# This is equivalent to find_packages(exclude=[...]) in setup.py.
exclude = ["tests*", "examples*", "utils*"]

# ---------------------------------------------------------------------------
# Package data  (replaces MANIFEST.in)
#
# IMPORTANT: osxphotos/docs, osxphotos/templates, osxphotos/queries,
# osxphotos/lib, and osxphotos/share are DATA directories — they have no
# __init__.py and are therefore NOT Python packages.  The original setup.py
# worked around this by manually appending them to the packages list (a
# common but hacky trick).  The correct modern approach is to declare their
# files here as package-data of the parent `osxphotos` package.
# ---------------------------------------------------------------------------
[tool.setuptools.package-data]
osxphotos = [
    # Root-level data files
    "*.json",
    "*.md",
    "phototemplate.tx",
    # Data subdirectories (no __init__.py — data only, not Python packages)
    "docs/*",
    "docs/**/*",
    "lib/*.dylib",
    "lib/*.md",
    "queries/*",
    "share/*",
    "templates/*",
]

# ---------------------------------------------------------------------------
# bump-my-version  (replaces .bumpversion.cfg)
# Usage: bump-my-version bump [major|minor|patch]
# ---------------------------------------------------------------------------
[tool.bumpversion]
current_version = "0.75.9"
parse  = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
commit = true
tag    = true
tag_name = "v{new_version}"

# Update version string in _version.py
[[tool.bumpversion.files]]
filename = "osxphotos/_version.py"
search   = "__version__ = \"{current_version}\""
replace  = "__version__ = \"{new_version}\""

# Update version in applecrate.toml (used for macOS installer builds)
[[tool.bumpversion.files]]
filename = "applecrate.toml"
search   = "version = \"{current_version}\""
replace  = "version = \"{new_version}\""

# ---------------------------------------------------------------------------
# pytest  (replaces pytest.ini)
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
addopts = "-p tests.plugins.env_vars"

# ---------------------------------------------------------------------------
# isort  (replaces .isort.cfg)
# ---------------------------------------------------------------------------
[tool.isort]
profile          = "black"
multi_line_output = 3

# ---------------------------------------------------------------------------
# ruff  (was already in pyproject.toml — kept and cleaned up)
# ---------------------------------------------------------------------------
[tool.ruff]
# Docs: https://docs.astral.sh/ruff/
# Rules: https://docs.astral.sh/ruff/rules/
target-version = "py310"
line-length    = 320

# TODO: Most of these ignores can be removed after code cleanup.
# Added to make ruff pass with code in its current state.
lint.ignore = [
    "E402",   # module-level import not at top of file
    "E721",   # type comparison (use isinstance())
    "E722",   # bare except
    "E741",   # ambiguous variable name
    "F401",   # unused import
    "F403",   # from module import *
    "F405",   # may be undefined or from star imports
    "F541",   # f-string without placeholders
    "F822",   # undefined name in __all__
    "F841",   # local variable assigned but never used
]

exclude = [
    ".git",
    ".mypy_cache",
    ".pre-commit-cache",
    ".ruff_cache",
    ".tox",
    ".venv",
    "venv",
    "docs",
    "__pycache__",
]

# ---------------------------------------------------------------------------
# black
# ---------------------------------------------------------------------------
[tool.black]
line-length    = 120
target-version = ["py310", "py311", "py312", "py313"]
